# VpackCore

./: CMakeLists.txt  VpackCore.hpp
src/: computer.hpp  layout_result.hpp  main.cpp  optional.hpp  types.cpp  types.hpp
src/layoutables/: item.hpp  layoutable.hpp  measurable.hpp
src/layoutables/containers/: container.hpp  decorated_container.hpp  horizontal_container.hpp  hv_container.hpp  stack_container.hpp  vertical_container.hpp
src/layoutables/utils/: size_extractor.hpp
src/utils/: indexed.hpp  math.hpp  sequence.hpp
tests/: CMakeLists.txt  tests.cpp
tests/src/: container.hpp  some_view.hpp  spacer.hpp  text.hpp  uuid.h  view.hpp
